# coco

./: .gitignore  README.md  coco.sh  control  requirements.txt  setup.cfg
.keys/: rsa_key
coco/bastion/: app.py  cmd.py
coco/cleaner/: app.py  cmd.py
coco/proxy/: app.py  cmd.py  exit.sh
coco/relay/: app.py  cmd.py
coco/relay/core/: ssh_intf.py  ssh_proxy.py
coco/tty_parser/: app.py  cmd.py
coco/util/: common.py  service.py
etc/: development.conf  prod.conf
install/: coco.sh  control
tools/: install_venv.py  install_venv_common.py  with_venv.sh
