[metadata]
name = coco
author = jinlong.yang
author-email = 1990yangjinlong@163.com
summary = coco ssh server
classifier =
    Development Status :: 1 - Planning
    Environment :: Plugins
    Framework :: Flask
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    coco

[entry_points]
console_scripts =
    coco-bastion = coco.bastion.cmd:bastion
